<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Login">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/login_progress"
        style="?android:progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/welcome_to_homesearch"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tagline"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_200"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="?attr/colorButtonNormal" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_200"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="?attr/colorButtonNormal" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/login_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/create_account_text" />

        <Button
            android:id="@+id/skip_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/skip"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>