<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="#232323"
    android:gravity="center">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/create_account_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:progressBarStyleLarge"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/email_login_form">

        <TextView
            android:id="@+id/create_account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/create_account_title"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/username_account_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColorHint="?attr/colorButtonNormal"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_200" />

        <AutoCompleteTextView
            android:id="@+id/email_account_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textColorHint="?attr/colorButtonNormal"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_200"/>

        <EditText
            android:id="@+id/password_account_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="?attr/colorButtonNormal"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_200" />

        <EditText
            android:id="@+id/location_account_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postcode_hint"
            android:textColorHint="?attr/colorButtonNormal"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_200" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/create_account_text" />

        <Button
            android:id="@+id/skip_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/transparent"
            android:textColor="#DDDDDD"/>


    </LinearLayout>



</LinearLayout>