<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        app:cardBackgroundColor="#232323"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/welcome_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:text="@string/welcome"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/username_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/username_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:text="username"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/logged_in_as_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="23dp"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/username_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/camera_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="19dp"
                android:background="@android:color/transparent"
                android:onClick="cameraProcess"
                android:src="@drawable/ic_baseline_photo_camera_24"
                app:srcCompat="@drawable/ic_baseline_photo_camera_24"
                map:layout_constraintBottom_toBottomOf="parent"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintTop_toTopOf="parent"
                map:layout_constraintVertical_bias="1.0"
                android:contentDescription="@string/snap_a_sign" />

            <ImageButton
                android:id="@+id/drop_a_pin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_add_location_alt_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/camera_button"
                app:layout_constraintHorizontal_bias="0.657"
                app:layout_constraintStart_toEndOf="@+id/search_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.522"
                app:srcCompat="@drawable/ic_baseline_add_location_alt_24"
                android:contentDescription="@string/drop_a_pin"/>

            <EditText
                android:id="@+id/search_value"
                android:layout_width="172dp"
                android:layout_height="39dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="13dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_200"
                android:ems="10"
                android:hint="@string/hint_search1"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#818080"
                app:layout_constraintVertical_bias="0.0"
                map:layout_constraintBottom_toBottomOf="parent"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <ImageButton
                android:id="@+id/search_btn"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_search_24"
                map:layout_constraintBottom_toBottomOf="parent"
                map:layout_constraintEnd_toStartOf="@+id/camera_button"
                map:layout_constraintStart_toEndOf="@+id/search_value"
                map:layout_constraintTop_toTopOf="parent"
                android:contentDescription="Search Button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
    </fragment>

    <ProgressBar
        android:id="@+id/map_progress"
        style="?android:progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="327dp"
        android:layout_marginBottom="328dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#232323"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:menu="@menu/bottom_nav_menu">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>
